# open-finance-comparador

./: README.md  open-finance-credit-card.py  pyproject.toml
apis-abertas/: opendata-creditcards___personal-credit-cards.json
